--- a/src/app/stagiaires/list/list.component.scss
+++ b/src/app/stagiaires/list/list.component.scss
@@ -11,7 +11,7 @@
 
 .menu-sub-list {
   display: none;
-  padding: 8px;
+  padding: 16px;
   border-radius: 10px;
   left: 100%;
   right: 0;
@@ -35,21 +35,22 @@
   text-align: left;
   text-indent: 16px;
   border: none;
-  box-shadow: 0 10px 20px rgba(darkslategrey, 0.15);
-  background-color: grey;
+  background-color: #9698A0;
   color: white;
   border-radius: .4em;
-  width: 260px;
+  width: 220px;
   height: 42px;
   margin: 5px 0px 5px 0px;
-  
+
   &:hover {
-    background-color: black;
+    background-color: #2D3041;
     color: white;
   }
 
   &:focus {
-    color: white;
+    color: #2D3041;
+    border: 4px solid;
+    border-color: #2D3041;
     animation: coolAppear 0.35s ease-in 0s 1 forwards;
     & + .menu-sub-list {
       display: flex;
@@ -76,7 +77,7 @@
   text-align: center;
   font-size: 26px;
   font-weight: bolder;
-  color: black;
+  color: #2D3041;
   width: 260px;
   height: 42px;
   margin: 25px 0px 0px 0px;
@@ -86,10 +87,10 @@
   float: right;
 	display: flex;
 	flex-flow: row wrap;
-	justify-content: center;
+	justify-content: left;
 	align-items: flex-start;
 	align-content: flex-start;
-	margin: 50px auto 50px 150px;
+	margin: 150px auto 50px 150px;
 	height: 360px;
 	width: 300px;
   border-radius: .4em;
@@ -107,14 +108,26 @@
 .material-icons.style { 
   cursor: pointer;
   color: white; 
-  background-color: black;
-  box-shadow: 0 10px 20px rgba(darkslategrey, 0.15);
-  background-repeat: no-repeat;
+  background-color: #2D3041;
   border-radius: .4em;
   width: 50px;
   height: 50px;
   margin: 10px 5px 10px 5px;
-  float:right
+  float: right;
+
+
+  &:hover {
+    background-color: red;
+    color: white;
+  }
+
+  &:focus {
+    color: white;
+    border: 3px solid;
+    border-color: #2D3041;
+    background-color: red;
+    animation: coolAppear 0.35s ease-in 0s 1 forwards;
+  }
 }
 
 button {
@@ -122,16 +135,30 @@ button {
     font-family: arial, sans-serif;
     font-size: 18px;
     border: none; // No border
-    box-shadow: 0 10px 20px rgba(darkslategrey, 0.15);
-    background-color: grey;
+    background-color: #9698A0;
     color: white;
     border-radius: .4em;
     width: 100px;
     height: 32px;
     margin: 10px 5px 10px 5px;
+
+    &.woman {
+      background-color: #CF1B6D;
+      color: white;
+    }
+
+    &.man {
+      background-color: #25AAE1;
+      color: white;
+    }
+
+    &.other {
+      background-color: #EC851D;
+      color: white;
+    }
     
     &:hover {
-      background-color: black;
+      background-color: #2D3041;
       color: white;
     }
   
@@ -144,8 +171,7 @@ button {
 .button2 {
   cursor: pointer;
   border: none; // No border
-  box-shadow: 0 10px 20px rgba(darkslategrey, 0.15);
-  background-color: grey;
+  background-color: #9698A0;
   color: white;
   border-radius: .4em;
   width: 100px;
@@ -153,12 +179,15 @@ button {
   margin: 5px 5px 5px 5px;
   
   &:hover {
-    background-color: black;
+    background-color: #2D3041;
     color: white;
   }
 
   &:focus {
     color: white;
+    border: 3px solid;
+    border-color: #2D3041;
+    background-color: white;
     animation: coolAppear 0.35s ease-in 0s 1 forwards;
   }
 }
@@ -166,14 +195,16 @@ button {
 
 @keyframes coolAppear {
     0% {
-      background-color: darken(black, 80%);
+      background-color: #2D3041, 80%;
     }
     50% {
-      background-color: darken(black, 40%);
+      background-color: #2D3041, 40%;
     }
     100% {
       background-color: white;
-      color: black;
+      color: #2D3041;
+      border: 3px solid;
+      border-color: #2D3041;
     }
 }
 
@@ -187,12 +218,13 @@ table {
     width: 50vw;
     min-width: 500px;
     padding: 8px;
+    color: #2D3041;
     
   
 tbody{
 
     text-align: left;
-    color: black;
+    color: #2D3041;
   
   td {
     &:first-child {
@@ -205,23 +237,53 @@ tbody{
             border-radius: .4em;
             line-height: 50px;
             vertical-align: middle;
-            box-shadow: 0 10px 20px rgba(darkslategrey, 0.15);
             text-align: center;
             font-weight: bolder;
+            color: #2D3041;
             &.male {
-                background-color: royalblue;
+                background-color: #25AAE1;
                 color: white;
+
+                &:hover {
+                  background-color: #2D3041;
+                  color: white;
+                }
+              
+                &:focus {
+                  color: white;
+                  animation: coolAppear 0.35s ease-in 0s 1 forwards;
+                }
             }
 
             &.female {
-                background-color: hotpink;
+                background-color: #CF1B6D;
                 color: white;
+
+                &:hover {
+                  background-color: #2D3041;
+                  color: white;
+                }
+              
+                &:focus {
+                  color: white;
+                  animation: coolAppear 0.35s ease-in 0s 1 forwards;
+                }
             }
 
             &.other {
-              background-color: forestgreen;
+              background-color: #EC851D;
               color: white;
-          }
+
+              &:hover {
+                background-color: #2D3041;
+                color: white;
+              }
+            
+              &:focus {
+                color: white;
+                animation: coolAppear 0.35s ease-in 0s 1 forwards;
+              }
+            }
         }
     }
 
@@ -231,22 +293,22 @@ tbody{
 }
  
 th{
-  color: black;
+  color: #2D3041;
   text-align: left;
 }
 
 tfoot{
   font-weight: bolder;
-  color: black;
+  color: #2D3041;
 }
 
 tr:nth-child(even) {
-  color: black;
-  background-color: aliceblue;
+  color: #2D3041;
+  background-color: #F4F4F4;
 }
 
 tr:nth-child(odd) {
-  color: black;
+  color: #2D3041;
 }
 }
 
@@ -263,3 +325,23 @@ a {
   }
 }
 
+.cd-popup {
+  position: fixed;
+  left: 0;
+  top: 0;
+  height: 100%;
+  width: 100%;
+  background-color: rgba(94, 110, 141, 0.9);
+  opacity: 0;
+  visibility: hidden;
+  -webkit-transition: opacity 0.3s 0s, visibility 0s 0.3s;
+  -moz-transition: opacity 0.3s 0s, visibility 0s 0.3s;
+  transition: opacity 0.3s 0s, visibility 0s 0.3s;
+}
+.cd-popup.is-visible {
+  opacity: 1;
+  visibility: visible;
+  -webkit-transition: opacity 0.3s 0s, visibility 0s 0s;
+  -moz-transition: opacity 0.3s 0s, visibility 0s 0s;
+  transition: opacity 0.3s 0s, visibility 0s 0s;
+}
