--- a/src/styles.scss
+++ b/src/styles.scss
@@ -4,5 +4,6 @@ html, body { height: 100%; }
 body { 
     margin: 0; 
     font-family: Roboto, "Helvetica Neue", sans-serif; 
+    color: #2D3041;
     background-color: white;
 }
