Changed Date Format

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,17 +1,18 @@
 <!-- Etageres à routes : routes-outlet-->
-<h1>{{ "appTitle" | translate }}</h1>
+
+<!-- <h1>{{ "appTitle" | translate }}</h1>
 <button
   type="button"
   (click)="switchLanguage('fr')"
   [disabled]="intlService.language === 'fr'"
 >
-  Fr
+  FR
 </button>
 <button
   type="button"
   (click)="switchLanguage('en')"
   [disabled]="intlService.language === 'en'"
 >
-  En
-</button>
+  EN
+</button> -->
 <router-outlet> </router-outlet>
