--- a/src/app/shared/formulaire-add-general/formulaire-add-general.component.html
+++ b/src/app/shared/formulaire-add-general/formulaire-add-general.component.html
@@ -28,7 +28,7 @@
     <mat-form-field appearance="fill">
       <mat-label>Date de naissance</mat-label>
       <input matInput [matDatepicker]="picker" formControlName="birthDate" />
-      <mat-hint>DD/MM/YYYY</mat-hint>
+      <mat-hint>JJ/MM/AAAA</mat-hint>
       <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
       <mat-datepicker #picker></mat-datepicker>
 
@@ -102,7 +102,7 @@
     <mat-form-field appearance="fill">
       <mat-label>La date du début</mat-label>
       <input matInput [matDatepicker]="picker" formControlName="beginDate" />
-      <mat-hint>DD/MM/YYYY</mat-hint>
+      <mat-hint>JJ/MM/AAAA</mat-hint>
       <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
       <mat-datepicker #picker></mat-datepicker>
 
@@ -121,7 +121,7 @@
     <mat-form-field appearance="fill">
       <mat-label>La date de fin</mat-label>
       <input matInput [matDatepicker]="pickerto" formControlName="endDate" />
-      <mat-hint>DD/MM/YYYY</mat-hint>
+      <mat-hint>JJ/MM/AAAA</mat-hint>
       <mat-datepicker-toggle matSuffix [for]="pickerto"></mat-datepicker-toggle>
       <mat-datepicker #pickerto></mat-datepicker>
 
