--- a/src/app/poes/component/list/list.component.scss
+++ b/src/app/poes/component/list/list.component.scss
@@ -1,114 +1,351 @@
-$default-color: rgb(23, 23, 22);
-$button-font-color: rgb(255, 255, 255);
-$button-background-color: transparent;
-$button-inactive-color: rgba(20, 20, 200);
-
 /**
 * SCSS Rules
 **/
-button {
-  border: none; // No border
-  background-color: $button-background-color;
-  color: $button-inactive-color;
-  width: 5em;
-  height: 4em;
 
-  &.is-selected {
-    border-radius: 0.4em;
-    color: $button-font-color;
-    animation: coolAppear 1s ease-in 0s 1 forwards;
-  }
-}
-
-@keyframes coolAppear {
-  0% {
-    background-color: lighten($button-inactive-color, 80%);
-  }
-  50% {
-    background-color: lighten($button-inactive-color, 40%);
-    transform: rota;
-  }
-  100% {
-    background-color: $button-inactive-color;
-  }
-}
-
-table {
-  font-family: arial, sans-serif;
-  border-collapse: collapse;
+.menu-list {
+  margin: 0;
+  display: block;
   width: 100%;
   padding: 8px;
-  width: auto;
-  height: auto;
+}
 
-  tbody {
-    border: 1px solid #6c0342;
-    text-align: center;
-    color: rgb(5, 1, 10);
+.menu-sub-list {
+  display: none;
+  padding: 16px;
+  border-radius: 10px;
+  left: 100%;
+  right: 0;
+  z-index: 100;
+  width: 100%;
+  top: 0;
+  flex-direction: column;
+  &:hover {
+    display: flex;
+  }
+}
 
-    td {
-      &:first-child {
-        span {
-          cursor: pointer;
-          display: inline-block;
-          height: 2em;
-          width: 2em;
-          line-height: 2em;
-          vertical-align: middle;
-          border-radius: 50%;
-          text-align: center;
-          font-weight: 700;
-          &.male {
-            // table tbody tr td:first-child span.male {...}
-            background-color: rgb(20, 20, 225);
-            color: $button-font-color;
-          }
+.menu-item {
+  position: relative;
+}
 
-          &.female {
-            background-color: rgb(243, 81, 227);
-            color: $button-font-color;
-          }
-        }
-      }
-      tr {
-        &.female {
-          color: rgb(0, 136, 255);
-        }
-        &.male {
-          color: rgb(255, 0, 0);
-        }
-      }
+.menu-button {
+  cursor: pointer;
+  font-family: arial, sans-serif;
+  font-size: 20px;
+  text-align: left;
+  text-indent: 16px;
+  border: none;
+  background-color: #9698A0;
+  color: white;
+  border-radius: .4em;
+  width: 220px;
+  height: 42px;
+  margin: 5px 0px 5px 0px;
+
+  &:hover {
+    background-color: #2D3041;
+    color: white;
+  }
+
+  &:focus {
+    color: #2D3041;
+    border: 4px solid;
+    border-color: #2D3041;
+    animation: coolAppear 0.35s ease-in 0s 1 forwards;
+    & + .menu-sub-list {
+      display: flex;
+    }
+    svg {
+      stroke: var(--color-text-primary);
+    }
+  }
+  svg {
+    flex-shrink: 0;
+    width: 20px;
+    height: 20px;
+    margin-right: 10px;
+    stroke: var(--color-text-primary-offset);
+    &:nth-of-type(2) {
+      margin-right: 0;
+      position: absolute;
     }
   }
 
-  th {
-    color: rgb(19, 1, 2);
-    border: 1px solid #6c0303;
+  &:active {
+    background-color: #2D3041;
+    color: white;
   }
-  tfoot {
-    border: 1px solid #6c0303;
-    font-weight: bolder;
-    text-align: right;
-    color: rgb(225, 0, 255);
+}
+
+#title {
+  font-family: arial, sans-serif;
+  text-align: center;
+  font-size: 26px;
+  font-weight: bolder;
+  color: #2D3041;
+  width: 260px;
+  height: 42px;
+  margin: 25px 0px 0px 0px;
+}
+
+#leftpanel {
+  float: right;
+	display: flex;
+	flex-flow: row wrap;
+	justify-content: left;
+	align-items: flex-start;
+	align-content: flex-start;
+	margin: 150px auto 50px 150px;
+	height: 360px;
+	width: 300px;
+  border-radius: .4em;
+	position: fixed;
+}
+
+#topbuttons {
+  margin-left: 500px;
+  margin-right: auto;
+  width: 50vw;
+  min-width: 500px;
+  
+}
+
+.material-icons.style { 
+  cursor: pointer;
+  color: white; 
+  background-color: #2D3041;
+  border-radius: .4em;
+  width: 50px;
+  height: 50px;
+  margin: 10px 5px 10px 5px;
+  float: right;
+
+
+  &:hover {
+    background-color: red;
+    color: white;
   }
-  tr:nth-child(even) {
-    background-color: #dddddd;
+
+  &:focus {
+    color: white;
+    border: 3px solid;
+    border-color: #2D3041;
+    background-color: red;
+    animation: coolAppear 0.35s ease-in 0s 1 forwards;
   }
+}
+
+button {
+    cursor: pointer;
+    font-family: arial, sans-serif;
+    font-size: 18px;
+    background-color: #9698A0;
+    color: white;
+    border-radius: .4em;
+    width: 100px;
+    height: 32px;
+    margin: 10px 5px 10px 5px;
+
+    &.woman {
+      background-color: #CF1B6D;
+      color: white;
+    }
+
+    &.man {
+      background-color: #25AAE1;
+      color: white;
+    }
+
+    &.other {
+      background-color: #EC851D;
+      color: white;
+    }
+    
+    &:hover {
+      background-color: #2D3041;
+      color: white;
+    }
+  
+    &:focus {
+      color: white;
+      animation: coolAppear 0.35s ease-in 0s 1 forwards;
+    }
+}
+
+.button2 {
+  cursor: pointer;
+  border: none; // No border
+  background-color: #9698A0;
+  color: white;
+  border-radius: .4em;
+  width: 100px;
+  height: 32px;
+  margin: 5px 5px 5px 5px;
+  
+  &:hover {
+    background-color: #2D3041;
+    color: white;
+  }
+
+  &:focus {
+    color: white;
+    border: 3px solid;
+    border-color: #2D3041;
+    background-color: white;
+    animation: coolAppear 0.35s ease-in 0s 1 forwards;
+  }
+}
+
+
+@keyframes coolAppear {
+    0% {
+      background-color: #2D3041, 80%;
+    }
+    50% {
+      background-color: #2D3041, 40%;
+    }
+    100% {
+      background-color: white;
+      color: #2D3041;
+      border: 3px solid;
+      border-color: #2D3041;
+    }
+}
+
+table {
+    font-family: arial, sans-serif;
+    font-size: 20px;
+    height: auto;
+    border-collapse: collapse;
+    margin-left: 500px;
+    margin-right: auto;
+    width: 50vw;
+    min-width: 500px;
+    padding: 8px;
+    color: #2D3041;
+    
+  
+tbody{
+
+    text-align: left;
+    color: #2D3041;
+  
+  td {
+    &:first-child {
+        span {
+            cursor: pointer;
+            display: inline-block;
+            width: 50px;
+            height: 50px;
+            margin: 10px 5px 10px 5px;
+            border-radius: .4em;
+            line-height: 50px;
+            vertical-align: middle;
+            text-align: center;
+            font-weight: bolder;
+            color: #2D3041;
+            &.male {
+                background-color: #25AAE1;
+                color: white;
+
+                &:hover {
+                  background-color: #2D3041;
+                  color: white;
+                }
+              
+                &:focus {
+                  color: white;
+                  animation: coolAppear 0.35s ease-in 0s 1 forwards;
+                }
+            }
+
+            &.female {
+                background-color: #CF1B6D;
+                color: white;
+
+                &:hover {
+                  background-color: #2D3041;
+                  color: white;
+                }
+              
+                &:focus {
+                  color: white;
+                  animation: coolAppear 0.35s ease-in 0s 1 forwards;
+                }
+            }
+
+            &.other {
+              background-color: #EC851D;
+              color: white;
+
+              &:hover {
+                background-color: #2D3041;
+                color: white;
+              }
+            
+              &:focus {
+                color: white;
+                animation: coolAppear 0.35s ease-in 0s 1 forwards;
+              }
+            }
+        }
+    }
+
+ }
+ 
+
+}
+ 
+th{
+  color: #2D3041;
+  text-align: left;
+}
+
+tfoot{
+  font-weight: bolder;
+  color: #2D3041;
+}
+
+tr:nth-child(even) {
+  color: #2D3041;
+  background-color: #F4F4F4;
+}
+
+tr:nth-child(odd) {
+  color: #2D3041;
+}
 }
 
 a {
   &.btn {
-    display: block;
-    text-decoration: none;
-    padding: 0.5em;
-    border-radius: 0.25em;
-    width: 5em;
-    margin: 0 auto;
-    text-align: center;
-    text-transform: uppercase;
-    &.btn-primary {
-      background-color: rgba(20, 20, 200);
-      color: rgb(255, 255, 255);
-    }
+      display: block;
+      text-decoration: none;
+      padding: .5em;
+      border-radius: .25em;
+      width: 5em;
+      margin: 0 auto;
+      text-align: center;
+      text-transform: uppercase;
   }
+}
+
+.cd-popup {
+  position: fixed;
+  left: 0;
+  top: 0;
+  height: 100%;
+  width: 100%;
+  background-color: rgba(94, 110, 141, 0.9);
+  opacity: 0;
+  visibility: hidden;
+  -webkit-transition: opacity 0.3s 0s, visibility 0s 0.3s;
+  -moz-transition: opacity 0.3s 0s, visibility 0s 0.3s;
+  transition: opacity 0.3s 0s, visibility 0s 0.3s;
+}
+.cd-popup.is-visible {
+  opacity: 1;
+  visibility: visible;
+  -webkit-transition: opacity 0.3s 0s, visibility 0s 0s;
+  -moz-transition: opacity 0.3s 0s, visibility 0s 0s;
+  transition: opacity 0.3s 0s, visibility 0s 0s;
 }
