--- a/src/styles.scss
+++ b/src/styles.scss
@@ -7,3 +7,6 @@ body {
     color: #2D3041;
     background-color: white;
 }
+
+/* Importing Bootstrap SCSS file. */
+@import "~bootstrap/scss/bootstrap";
