--- a/src/app/stagiaires/list/list.component.html
+++ b/src/app/stagiaires/list/list.component.html
@@ -1,7 +1,5 @@
 <body>
 
-
-
   <div id="leftpanel">
 
     <div id="title">
@@ -111,7 +109,7 @@
                 background-color: white;
                 border-radius: .4em;">
                   <p style="font-size: 22px;">Confirmer la suppression ?</p>
-                  <button type="button" (click)="confirm(stagiaire)" >Supprimer</button>
+                  <button type="button" class="delete" (click)="confirm(stagiaire)" >Supprimer</button>
                   <button type="button" (click)="decline()" >Annuler</button>
                 </div>
               </ng-template>
