--- a/src/app/stagiaires/list/list.component.html
+++ b/src/app/stagiaires/list/list.component.html
@@ -103,7 +103,6 @@
               <button mat-mini-flat class="material-icons style" (click)="openModal(template)">
                 <mat-icon>delete</mat-icon>
               </button>
-              <br><br>
               <ng-template #template>
                 <div class="modal-body text-center"  style="
                 background-color: white;
@@ -113,6 +112,10 @@
                   <button type="button" (click)="decline()" >Annuler</button>
                 </div>
               </ng-template>
+              <button mat-mini-flat class="material-icons style2">
+                <mat-icon>edit</mat-icon>
+              </button>
+              
             </td>
           </tr>
         </ng-container>
