--- a/src/app/stagiaires/list/list.component.scss
+++ b/src/app/stagiaires/list/list.component.scss
@@ -150,6 +150,31 @@
   }
 }
 
+.material-icons.style2 { 
+  cursor: pointer;
+  color: white; 
+  background-color: #9698A0;
+  border-radius: .4em;
+  width: 50px;
+  height: 50px;
+  margin: 10px 5px 10px 5px;
+  float: right;
+
+
+  &:hover {
+    background-color: #2D3041;
+    color: white;
+  }
+
+  &:focus {
+    color: #2D3041;
+    border: 3px solid;
+    border-color: #2D3041;
+    background-color: white;
+    animation: coolAppear 0.35s ease-in 0s 1 forwards;
+  }
+}
+
 button {
     cursor: pointer;
     font-family: arial, sans-serif;
