--- a/src/app/stagiaires/list/list.component.html
+++ b/src/app/stagiaires/list/list.component.html
@@ -11,19 +11,19 @@
         <div class="menu-item"><button class="menu-button">• &nbsp;&nbsp;Formations</button>
           <ul class="menu-sub-list">
             <div class="menu-item"><button class="menu-button">Panorama</button></div>
-            <div class="menu-item"><button class="menu-button" (click)="goToPOEList()">Liste</button></div>
+            <div class="menu-item"><button class="menu-button" (click)="goToPOESList()">Liste</button></div>
           </ul>
         </div>
         <div class="menu-item"><button class="menu-button">• &nbsp;&nbsp;Participants</button>
           <ul class="menu-sub-list">
             <div class="menu-item"><button class="menu-button">Panorama</button></div>
-            <div class="menu-item"><button class="menu-button" (click)="goToTrainees()">Liste</button></div>
+            <div class="menu-item"><button class="menu-button" (click)="goToTraineesList()">Liste</button></div>
           </ul>
         </div>
         <div class="menu-item"><button class="menu-button">• &nbsp;&nbsp;Ajouter</button>
           <ul class="menu-sub-list">
-            <div class="menu-item"><button class="menu-button">Formation</button></div>
-            <div class="menu-item"><button class="menu-button" (click)="goToAdd()">Participant</button></div>
+            <div class="menu-item"><button class="menu-button" (click)="goToPOESAdd()">Formation</button></div>
+            <div class="menu-item"><button class="menu-button" (click)="goToTraineesAdd()">Participant</button></div>
           </ul>
         </div>
         <div class="menu-item"><button class="menu-button">• &nbsp;&nbsp;Statistiques</button>
