--- a/src/app/poes/component/list/list.component.html
+++ b/src/app/poes/component/list/list.component.html
@@ -1,122 +1,178 @@
 <body>
+  <div id="leftpanel">
+    <div id="title">
+      <p>> MENU</p>
+    </div>
 
-<div id="leftpanel">
-
-  <div id="title">
-    <p>> MENU</p>
-  </div>
-
-  <div>
-    <ul class="menu-list">
-      <div class="menu-item"><button class="menu-button">• &nbsp;&nbsp;Formations</button>
-        <ul class="menu-sub-list">
-          <div class="menu-item"><button class="menu-button">Panorama</button></div>
-          <div class="menu-item"><button class="menu-button" (click)="goToPOESList()">Liste</button></div>
-        </ul>
-      </div>
-      <div class="menu-item"><button class="menu-button">• &nbsp;&nbsp;Participants</button>
-        <ul class="menu-sub-list">
-          <div class="menu-item"><button class="menu-button">Panorama</button></div>
-          <div class="menu-item"><button class="menu-button" (click)="goToTraineesList()">Liste</button></div>
-        </ul>
-      </div>
-      <div class="menu-item"><button class="menu-button">• &nbsp;&nbsp;Ajouter</button>
-        <ul class="menu-sub-list">
-          <div class="menu-item"><button class="menu-button" (click)="goToPOESAdd()">Formation</button></div>
-          <div class="menu-item"><button class="menu-button" (click)="goToTraineesAdd()">Participant</button></div>
-        </ul>
-      </div>
-      <div class="menu-item"><button class="menu-button">• &nbsp;&nbsp;Statistiques</button>
-      </div>
-      <div class="menu-item"><button class="menu-button">• &nbsp;&nbsp;Archives</button></div>
-    </ul>
-  </div>
-</div>
-
-<div id="topbuttons">
-
-  <br>
-  <br>
-
-  <button type="button" (click)="showLi = 'All'" [ngClass]="{ 'is-selected': showLi === 'All' }">
-    Tous
-  </button>
-
-  <button type="button" class="poei" (click)="showLi = 'POEI'" [ngClass]="{ 'is-selected': showLi === 'POEI' }">
-    POEI
-  </button>
-
-  <button type="button" class="poec" (click)="showLi = 'POEC'" [ngClass]="{ 'is-selected': showLi === 'POEC' }">
-    POEC
-  </button>
-
-  <br>
-  <br>
-
-</div>
-
-<table>
-  <thead>
-    <tr>
-      <th>&nbsp;</th>
-      <th>Titre</th>
-      <th>Date du début</th>
-      <th>Date de fin</th>
-      <th>Type de Poe</th>
-      <th>&nbsp;</th>
-    </tr>
-  </thead>
-
-  <tbody>
-    <ng-container *ngFor="let poe of poes">
-      <tr *ngIf="(showLi === 'All' ) || (poe.poeType === showLi)">
-
-        <td>
-          <span [ngClass]="{
-              bubble: true,
-              poei: poe.poeType === 'POEI',
-              poec: poe.poeType === 'POEC'
-            }">
-            {{ poe.poeType }}
-          </span>
-        </td>
-        <td>
-          {{ poe.title | uppercase }}
-        </td>
-        <td>
-          {{ poe.beginDate | date : "dd/MM/YYYY" }}
-        </td>
-        <td>
-          {{ poe.endDate | date : "dd/MM/YYYY" }}
-        </td>
-        <td>
-          {{ poe.poeType | uppercase }}
-        </td>
-
-        <td>
-          <button mat-mini-flat class="material-icons style" (click)="openModal(template)">
-            <mat-icon>delete</mat-icon>
-          </button>
-          <ng-template #template>
-            <div class="modal-body text-center"  style="
-            background-color: white;
-            border-radius: .4em;">
-              <p style="font-size: 22px;">Confirmer la suppression ?</p>
-              <button type="button" class="delete" (click)="confirm(poe)" >Supprimer</button>
-              <button type="button" (click)="decline()" >Annuler</button>
+    <div>
+      <ul class="menu-list">
+        <div class="menu-item">
+          <button class="menu-button">• &nbsp;&nbsp;Formations</button>
+          <ul class="menu-sub-list">
+            <div class="menu-item">
+              <button class="menu-button">Panorama</button>
             </div>
-          </ng-template>
-        </td>
+            <div class="menu-item">
+              <button class="menu-button" (click)="goToPOESList()">
+                Liste
+              </button>
+            </div>
+          </ul>
+        </div>
+        <div class="menu-item">
+          <button class="menu-button">• &nbsp;&nbsp;Participants</button>
+          <ul class="menu-sub-list">
+            <div class="menu-item">
+              <button class="menu-button">Panorama</button>
+            </div>
+            <div class="menu-item">
+              <button class="menu-button" (click)="goToTraineesList()">
+                Liste
+              </button>
+            </div>
+          </ul>
+        </div>
+        <div class="menu-item">
+          <button class="menu-button">• &nbsp;&nbsp;Ajouter</button>
+          <ul class="menu-sub-list">
+            <div class="menu-item">
+              <button class="menu-button" (click)="goToPOESAdd()">
+                Formation
+              </button>
+            </div>
+            <div class="menu-item">
+              <button class="menu-button" (click)="goToTraineesAdd()">
+                Participant
+              </button>
+            </div>
+          </ul>
+        </div>
+        <div class="menu-item">
+          <button class="menu-button">• &nbsp;&nbsp;Statistiques</button>
+        </div>
+        <div class="menu-item">
+          <button class="menu-button">• &nbsp;&nbsp;Archives</button>
+        </div>
+      </ul>
+    </div>
+  </div>
+
+  <div id="topbuttons">
+    <br />
+    <br />
+
+    <button
+      type="button"
+      (click)="showLi = 'All'"
+      [ngClass]="{ 'is-selected': showLi === 'All' }"
+    >
+      Tous
+    </button>
+
+    <button
+      type="button"
+      class="poei"
+      (click)="showLi = 'POEI'"
+      [ngClass]="{ 'is-selected': showLi === 'POEI' }"
+    >
+      POEI
+    </button>
+
+    <button
+      type="button"
+      class="poec"
+      (click)="showLi = 'POEC'"
+      [ngClass]="{ 'is-selected': showLi === 'POEC' }"
+    >
+      POEC
+    </button>
+
+    <br />
+    <br />
+  </div>
+
+  <table>
+    <thead>
+      <tr>
+        <th>&nbsp;</th>
+        <th>Titre</th>
+        <th>Date du début</th>
+        <th>Date de fin</th>
+        <th>Type de Poe</th>
+        <th>&nbsp;</th>
       </tr>
-    </ng-container>
-  </tbody>
+    </thead>
+
+    <tbody>
+      <ng-container *ngFor="let poe of poes">
+        <tr *ngIf="showLi === 'All' || poe.poeType === showLi">
+          <td>
+            <span
+              [ngClass]="{
+                bubble: true,
+                poei: poe.poeType === 'POEI',
+                poec: poe.poeType === 'POEC'
+              }"
+            >
+              {{ poe.poeType }}
+            </span>
+          </td>
+          <td>
+            {{ poe.title | uppercase }}
+          </td>
+          <td>
+            {{ poe.beginDate | date : "dd/MM/YYYY" }}
+          </td>
+          <td>
+            {{ poe.endDate | date : "dd/MM/YYYY" }}
+          </td>
+          <td>
+            {{ poe.poeType | uppercase }}
+          </td>
+
+          <td>
+            <button
+              mat-mini-flat
+              class="material-icons style"
+              (click)="openModal(template)"
+            >
+              <mat-icon>delete</mat-icon>
+            </button>
+            <ng-template #template>
+              <div
+                class="modal-body text-center"
+                style="background-color: white; border-radius: 0.4em"
+              >
+                <p style="font-size: 22px">Confirmer la suppression ?</p>
+                <button type="button" class="delete" (click)="confirm(poe)">
+                  Supprimer
+                </button>
+                <button type="button" (click)="decline()">Annuler</button>
+              </div>
+            </ng-template>
+            <button
+              mat-mini-flat
+              class="material-icons style2"
+              (click)="goToUpdate(poe.id)"
+            >
+              <mat-icon>edit</mat-icon>
+            </button>
+            <button mat-mini-flat class="material-icons style2">
+              <mat-icon>add</mat-icon>
+            </button>
+          </td>
+        </tr>
+      </ng-container>
+    </tbody>
 
     <tr>
-      <td colspan="5" style="font-size: 20px; text-align: center; font-weight: bolder;">
-        <br>
-        {{ getDisplayRowsNumber() }}/{{ poes.length }}</td>
+      <td
+        colspan="5"
+        style="font-size: 20px; text-align: center; font-weight: bolder"
+      >
+        <br />
+        {{ getDisplayRowsNumber() }}/{{ poes.length }}
+      </td>
     </tr>
-
-</table>
-
+  </table>
 </body>
