--- a/src/app/stagiaires/list/list.component.html
+++ b/src/app/stagiaires/list/list.component.html
@@ -178,6 +178,9 @@
               >
                 <mat-icon>edit</mat-icon>
               </button>
+              <button mat-mini-flat class="material-icons style2">
+                <mat-icon>add</mat-icon>
+              </button>
             </td>
           </tr>
         </ng-container>
